# SberWifi

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/ru/sbrf/sberwifi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  IperfTest.cpp  IperfTest.h  VerboseEnum.h  iperfJava.cpp  iperfJava.h  native-lib.cpp  start.h
app/src/main/cpp/include/: IperfTest.h  JsonReport.h  RoleEnum.h  iperfJava.h
app/src/main/cpp/iperf/: Makefile  Verbose.h  cjson.c  cjson.h  dscp.c  flowlabel.h  iperf.h  iperf_api.c  iperf_api.h  iperf_auth.c  iperf_auth.h  iperf_client_api.c  iperf_config.h  iperf_error.c  iperf_locale.c  iperf_locale.h  iperf_sctp.c  iperf_server_api.c  iperf_tcp.c  iperf_time.c  iperf_udp.c  iperf_util.c  iperf_util.h  main.c  net.c  net.h  portable_endian.h  queue.h  t_api.c  t_timer.c  t_units.c  tcp_info.c  timer.c  timer.h  units.c
app/src/main/cpp/iw/: connect.c  event.c  genl.c  ibss.c  info.c  interface.c  iw.c  iw.h  link.c  mesh.c  mpath.c  nl80211.h  offch.c  phy.c  reason.c  reg.c  scan.c  station.c  status.c  survey.c  util.c
app/src/main/cpp/src/: IperfTest.cpp  iperfJava.cpp
app/src/main/cpp/util/utf8/: checked.h  unchecked.h
app/src/main/java/ru/sbrf/sberwifi/: DetectorViewModel.kt  EnumUtils.kt  FragmentEnum.kt  FragmentStateHelper.kt  FrequencyPredicate.kt  LocaleUtils.kt  MainActivity.kt  MainContext.kt  ParallaxScrollListView.java  Report.kt  ReportFragment.kt  ResultWiFi.kt  Strength.kt  WiFi.kt  WiFiChannel.kt  WiFiChannelCountry.kt  WiFiChannelCountryGHZ2.kt  WiFiChannelCountryGHZ5.kt  WiFiChannels.kt  WiFiChannelsGHZ2.kt  WiFiChannelsGHZ5.kt  WiFiConnection.kt  WiFiFragment.kt  WiFiModel.kt  WiFiScanLiveData.kt  WiFiSignal.kt  WiFiUtils.kt  WiFiWidth.kt  WifiBand.kt
app/src/main/res/anim/: item_animation_fall_down.xml  layout_animation_fall_down.xml  layout_animation_from_bottom.xml
app/src/main/res/drawable/: border_button.xml  ic_menu_black_24dp.xml  ic_report_black_24dp.xml  rounded_border.xml  separator_line.xml
app/src/main/res/drawable-v24/: ic_lock.xml  ic_lock_open.xml  ic_lock_outline.xml
app/src/main/res/layout/: activity_main.xml  channel_rating_details.xml  fragment_detail_info.xml  fragment_iperf.xml  fragment_report.xml  fragment_wifi.xml  listview_header.xml  main_connect.xml  wifi_list_menu.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  toggles_text.xml
app/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
(+65 files in other folders)
